# astro-soft-build

./: LICENSE  README  buid-soft-stable.sh  build-fxload.sh  build-soft-latest.sh  build-soft-stable.sh  build-soft.sh  install-dependencies.sh
fxload/: CMakeLists.txt  fxload
fxload/debian/: changelog  control  copyright
